# lab-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  update.sh
annotation/: pyproject.toml
annotation/annotation/: annotation.py  console.py  datasets.py  evaluation.py  inference.py  training.py  unet.py
bart/: pyproject.toml
common/common/experiments/: dataset.py  experiment.py  image.py  legacy.py  loader.py  lux2.py  tags.py
components/worker/: Dockerfile  entrypoint.sh
cvat_deploy/: pyproject.toml  update_cv2_stub.sh
cvat_deploy/cvat_deploy/: core.py
cytomancer/: analysis_cli.py  celery.py  cli.py  click_utils.py  config.py  config_click.py  cvat_cli.py  display.py  experiment.py  exposure.py  launcher.py  segmentation.py  settings.py  updater.py  utils.py
cytomancer/analysis/: pultra_survival.py
cytomancer/cvat/: cli.py  click.py  helpers.py  measure.py  nuc_cyto.py  survival.py  upload.py
cytomancer/fiftyone/: click.py  ingest.py
cytomancer/io/: cq1_loader.py  ioutils.py  legacy_loader.py  lux_loader.py  nd2_loader.py
cytomancer/oneoffs/: click.py  ilastish_seg_model.py  stardist_seg_cvat_proj.py  tasks.py
cytomancer/ops/: filters.py  registration.py
cytomancer/quant/: click.py  neurite_quant.py  pultra_classifier.py  pultra_model.py  pultra_survival.py  tasks.py
cytomancer/tests/cvat/: test_helpers.py
docs/: cvat.md  data_architecture.md  turbo.md
gecs/: README.md  pyproject.toml
gecs/gecs/: cli.py  composite.py  conversions.py  correlate.py  cvat.py  cvat_deploy.py  flatfield.py  masa_prep.py  measure.py  settings.py  sns.py
gecs/gecs/analysis/: colocalize.py  measure.py
gecs/gecs/preprocess/: segmentation.py
gecs/gecs/preprocessing/: composite.py  flatfield.py  project.py  sns.py
gecs/gecs/util/: cvat_deploy.py  masa_prep.py
ilmatic/: pyproject.toml
ilmatic/ilmatic/: core.py
improc/: pyproject.toml
improc/improc/: brightfield.py  pipeline.py  task.py
improc/improc/common/: result.py
improc/improc/experiment/: loader.py  lux.py  types.py
improc/improc/experiment/legacy/: loader.py  mfile.py  util.py
improc/improc/pipeline/: node.py  pipeline.py
improc/improc/processes/: __init__.py  brightfield.py  composite.py  filter.py  flatfield.py  ilmatic.py  motility.py  nuc_frac.py  rescale.py  scaling.py  stack.py  stitching.py  types.py
improc/improc/processes/ilmatic/: core.py  util.py
improc/improc/processes/legacy_survival/: analysis.py  annotate.py  legacy.py  makeconfig.py  measurements.py  survival_analysis.py
improc/improc/survival/: survival_analysis.py
improc/improc/utils/: IJEncoding.py  agg.py  arr_experiment.py  arr_utils.py  enumero.py  improc_json.py  json_hack.py  legacy.py  makeconfig.py  nuc_frac.py  types.py
improc/improc/utils/experiments/: dataset.py  experiment.py  image.py  legacy.py  loader.py  tags.py
lab_tools/: analysis_cli.py  celery.py  cvat_cli.py  display.py  enumero.py  experiment.py  exposure.py  filters.py  registration.py  segmentation.py  settings.py  util.py  utils.py
lab_tools/analysis/: cli.py  nuclei_survival.py  nuclei_survival_svm.py  pultra_survival.py  tasks.py
lab_tools/cvat/: cli.py  measure.py  nuc_cyto.py  survival.py  upload.py
lab_tools/io/: cq1_loader.py  legacy_loader.py  lux_loader.py  nd2_loader.py
lab_tools/models/: nuclei_survival_svm.py
masa/: pyproject.toml
masa/masa/: __main__.py  core.py
notebooks/: benchmark_stardist.ipynb  clean.sh  nuclear_survival_svm.ipynb  pyproject.toml  stardist_tuning.ipynb
notebooks/notebooks/: brightfield_prep.ipynb  brightfield_survival_guide.ipynb  brightfield_survival_pipeline.ipynb  cell_counter.ipynb  filter_example.ipynb  flatfielding_stitcher.ipynb  fluor_survival.ipynb  ilastik_2_barma.ipynb  ilmatic_survival.ipynb  mito_moti.ipynb  process_many.ipynb  r_survival_analysis.ipynb  stack.ipynb  stack_timeseries.ipynb  survival.ipynb
notebooks/notebooks/config/: __init__.py  default.py  reference.py
notebooks/notebooks/utils/: experiment_chooser.ipynb
rscripts/: survival.R
scripts/: archive.sh  deploy.sh  pull.sh  setup.sh  update.sh
src/gecs/: cli.py  display.py  experiment.py  experiments.py  filters.py  helpers.py  io.py  registration.py  segmentation.py  settings.py
src/gecs/analysis/: measure.py  survival.py
src/gecs/cvat/: measure.py  nuc_cyto.py  survival.py  upload.py
src/gecs/io/: cq1_loader.py  ioutils.py  legacy_loader.py  loader.py  lux_loader.py  nd2_loader.py
src/gecs/models/: nuclei_survival_svm.py
src/gecs/preprocessing/: composite.py  flatfield.py  project.py  sns.py
src/gecs/util/: cvat_colocalization.py  cvat_deploy.py  cvat_measure.py  cvat_survival_analysis.py  cvat_upload_experiment.py  cvat_upload_images.py  masa_prep.py
src/improc/: agg.py  enumero.py  json_hack.py  rand.py
src/improc/experiment/: types.py
src/improc/experiment/legacy/: loader.py  mfile.py
src/improc/processes/: brightfield.py  composite.py  filter.py  flatfield.py  motility.py  rescale.py  stack.py  stitching.py  types.py
src/improc/processes/legacy_survival/: analysis.py  makeconfig.py  utils.py
src/survival/: cli.py  core.py  core_replacement.py  gedi.py  hazard_analysis.py  puncta.py  segmentation.py
survival/: README.md  pyproject.toml
survival/survival/: audit.py  cli.py  core.py  filters.py  gedi.py  measurements.py  puncta.py  segmentation.py  survival.py
