[tool.poetry]
name = "lab_tools"
version = "0.1.0"
description = ""
authors = ["Jacob Waksmacki <jwaksmack@gmail.com>"]
packages = [
    { include = "gecs", from = "src"},
    { include = "improc", from = "src"},
]

[tool.poetry.scripts]
gecs = "gecs.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.2"
Pillow = "^9.0.1"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
tifffile = "^2023.7.18"
scikit-image = "^0.19.3"
scikit-learn = "^1.1.1"
multiprocess = "^0.70.13"
pystackreg = "^0.2.6"
charset-normalizer = "^2.1.1"
PyYAML = "^6.0"
tqdm = "^4.64.1"
pybasic-illumination-correction = "^0.1.1"
opencv-python-headless = "^4.6.0.66"
largestinteriorrectangle = "^0.2.0"
tensorflow = "^2.13.0"
cvat-sdk = "^2.7.2"
pydantic = "<2.0.0"
python-dotenv = "^1.0.0"
trogon = "^0.5.0"
click = "^8.1.7"
lifelines = "^0.27.8"
xarray = "^2023.9.0"
cftime = "^1.6.2"
zarr = "^2.16.1"
dask = {extras = ["complete"], version = "^2023.9.3"}
dask-image = "^2023.8.1"
dask-jobqueue = "^0.8.2"
bokeh = "^3.3.0"
torch = {version = "^2.1.0+cpu", source = "pytorch-cpu"}
cellpose = "^2.2.3"
bottleneck = "^1.3.7"
nd2 = "^0.8.0"
toolz = "^0.12.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
napari = {extras = ["pyside2"], version = "^0.4.16"}
ipython = "^8.16.1"
pytest = "^5.2"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.pyright]
reportPrivateImportUsage = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
