[tool.poetry]
name = "cytomancer"
version = "0.1.0"
description = ""
authors = ["Jacob Waksmacki <jwaksmack@gmail.com>"]

[tool.poetry.scripts]
cyto = "cytomancer.cli:cli"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.3.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.0"
toolz = "^0.12.0"
trogon = "^0.5.0"
click = "^8.1.7"
tqdm = "^4.64.1"
cftime = "^1.6.2"
lxml = "^4.9.3"
numpy = "^1.22.2"
scipy = "^1.8.0"
scikit-image = "^0.19.3"
scikit-learn = "1.4.0"
matplotlib = "^3.5.1"
tifffile = "^2023.7.18"
nd2 = "^0.10.0"
ome-types = "^0.5.0"
Pillow = "10.1.0"
xarray = "^2023.9.0"
dask = "2024.4.1"
distributed = "2024.4.1"
dask-image = "^2023.8.1"
bokeh = "^3.3.0"
bottleneck = "^1.3.7"
pystackreg = "^0.2.6"
lifelines = "^0.27.8"
largestinteriorrectangle = "^0.2.0"
cvat-sdk = "2.10.0"
stardist = "^0.8.5"
pyarrow = "15.0.0"
hdaf-filter = "^0.1.1"
h5py = "^3.10.0"
textual = "0.53.0" # explicit dependency to avoid trogon incompatibility with 0.54.0
more-itertools = "^10.2.0"
celery = "^5.4.0"
redis = "^5.0.4"
tensorflow-cpu = "2.15.0"
pygithub = "^2.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
flake8 = "^6.1.0"
ipython = "^8.22.2"
napari = "^0.4.19"

[tool.pyright]
reportPrivateImportUsage = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
