[tool.poetry]
name = "improc"
version = "0.1.0"
description = ""
authors = ["Jacob Waksmacki <jwaksmack@gmail.com>"]

[tool.poetry.scripts]
flatfield = "improc.flatfield_cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.2"
Pillow = "^9.0.1"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
tifffile = "^2022.4.8"
scikit-image = "^0.19.3"
scikit-learn = "^1.1.1"
multiprocess = "^0.70.13"
imagecodecs = "^2022.2.22"
pystackreg = "^0.2.6"
charset-normalizer = "^2.1.1"
PyYAML = "^6.0"
pandas = "^1.5.0"
tqdm = "^4.64.1"
dask = {extras = ["complete"], version = "^2022.9.1"}
h5py = "^3.7.0"
napari = {extras = ["pyside2"], version = "^0.4.16"}
read-roi = "^1.6.0"
Shapely = "^1.8.4"
dask-image = "^2022.9.0"
stitch2d = "^1.1"
imageio-ffmpeg = "^0.4.7"
pybasic-illumination-correction = "^0.1.1"
m2stitch = { git = "https://github.com/yfukai/m2stitch" }
joblib = "^1.2.0"
opencv-python-headless = "^4.6.0.66"
scikit-video = "^1.1.11"


[tool.pyright]
reportPrivateImportUsage = false

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
