[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["kerowak <boiwaq@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyterlab = "^3.4.8"
ipyfilechooser = "^0.6.0"
improc = { path = "../improc/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
