[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["kerowak <boiwaq@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
improc = { path = "../improc/", develop = true }
napari = {extras = ["pyside2"], version = "^0.4.16"}
jupyterlab = "^3.2.1"
ipywidgets = "^7.7.1"
ipyfilechooser = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
