[tool.poetry]
name = "survival"
version = "0.1.0"
description = ""
authors = ["Jacob Waksmacki <jwaksmac@umich.edu>"]

[tool.poetry.scripts]
surv = "survival.cli:run"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "^1.23"
scikit-image = "^0.19.3"
improc = { path = "../improc", develop = true }
lifelines = "^0.27.4"
largestinteriorrectangle = "^0.2.0"
ipython = "8.8"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.2"
ipympl = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
